--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
