--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
