--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/react-redux": "^7.1.33",
     "lodash": "^4.17.21",
@@ -25,7 +28,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
+    "@chromatic-com/storybook": "^1.7.0",
     "@eslint/js": "^9.8.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
@@ -44,11 +47,11 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "globals": "^15.9.0",
     "storybook": "^8.2.9",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0",
+    "typescript-eslint": "^7.3.1",
     "vite": "^5.4.0"
   },
   "eslintConfig": {
